[FIX] website_sale: fix suggested product description overflow
This commit fixes an issue about products description overflowing in the
context of the suggested accessories in the cart UI.

Prior to this commit, a `text-truncate` was applied on the element but
the flex layout was preventing the element to truncate correctly.

To fix this issue, we set `.o_description_line` to this element, which
will apply the same styling as the regular cart line, making it more
consistent.

task-4915440

X-original-commit: 435e10ac3820bbd8f5a8f3db4d5415ae6e05f1a3

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -1555,6 +1555,11 @@ a.no-decoration {
 
         .o_description_line {
             @include o-line-clamp(2);
+
+            &.text-truncate {
+                text-overflow: clip;
+                white-space: normal;
+            }
         }
     }
 
